# robocup-pkg

./: .gitignore  .travis.yml  README.md  annotated.html  classes.html  dir_03497da4b7e98bcb6127a9b80d3cb5ea.html  dir_037c8af669f774c343796dde81a87c03.html  dir_063d778f36ef2a974e07f44a0adab96d.html  dir_0681d149b34cb9aaa2392eaf8cf47416.html  dir_0adb587d8861fa73dc4c259973f0b1d3.html  dir_0b5a2121ebfaf2152fe894c6cf66695d.html  dir_0ba111d2b315fd44cd1256b517066cdc.html  dir_0bf550ea73a85b5f0b91571d2ba9e22d.html  dir_0d260ca7fd6b0cf9cf59b43709337b22.html  dir_0e46c7c723922260d3ff3da38ed251d9.html  dir_0eea8483e168af5b96b085398ee65a4d.html  dir_13d9ddd34e05fbced47cc613f245bc8c.html  dir_1408c5cd8dcf859310146d726206cb5c.html  dir_15002fc52f515edffb6e3e945f4e32a5.html  dir_15b2429b52f9db9e22a791741aa085b9.html  dir_16ca9421014c9f598862fbd862fca78a.html  dir_17d3726349faa9100237a593c4bfd6fa.html  dir_19b018388a0f53268891d5dcbb36ef3c.html  dir_19ecedbbc65c7170ad115bdd1db4bb16.html  dir_1a3e78e775776775d5539f0ecd953f07.html  dir_21ee7044ecf1650c001f9fafe9cfccc1.html  dir_2276f8d4e7be8c600539275208a6d36a.html  dir_228159e7f08ac2043d3ddbcc3b09cb23.html  dir_22cddf4288fa96082464f43a4ca0155d.html  dir_23719754cef057187ba7c6ae9fc63a67.html  dir_26690865e28af475da1ac026a6c4940c.html  dir_29aeef6c00631ba04b950db14fe8ac5b.html  dir_29f179debc472542be9dd2b4a96af363.html  dir_2a32cbe4baf7dc2ab0e694a0b4fbf3df.html  dir_2c138aebaba55925570bd72160ade18d.html  dir_2c76401b760942dffa40076b5a1268e2.html  dir_2d80b0817e101eca5ac424b7982d38a5.html  dir_2ece3f525543f985573ee9ec63ef577f.html  dir_2f277c1adc6b2a3e980407ab2f286595.html  dir_309b9255c743603b4888838175140963.html  (+266 more)
ci-travis/: Doxyfile  (+3 more)
communication/refBoxComm/: CMakeLists.txt  mainpage.dox  package.xml
communication/refBoxComm/cfg/: config.yaml
communication/refBoxComm/include/: dispatch.h  receiveHandler.h  refBoxMessage.h  refBoxTransport.h  refBoxUtils.h  sendScheduler.h  typeInfo.h
communication/refBoxComm/scripts/: test_explorationInfoListener.py  test_gameStateListener.py  test_reportMachine.py
communication/refBoxComm/src/: explorationInfoListenerNode.cpp  receiveHandler.cpp  refBoxComm.cpp  refBoxCommNode.cpp  refBoxMessage.cpp  refBoxTransport.cpp  refBoxTransport.h  refBoxUtils.cpp  sendScheduler.cpp  typeInfo.cpp
communication/refbox_comm/: CMakeLists.txt  README.md  mainpage.dox  package.xml  readme.txt
communication/refbox_comm/cfg/: config.yaml
communication/refbox_comm/include/: dispatch.h  refBoxComm.h  refBoxMessage.h  refBoxTransport.h  refBoxUtils.h  sendScheduler.h
communication/refbox_comm/launch/: refBoxComm.launch  refDebug.launch  refDebugddd.launch  refValgrind.launch
communication/refbox_comm/scripts/: test_reportMachine.py
communication/refbox_comm/src/: explorationInfoListenerNode.cpp  refBoxComm.cpp  refBoxComm_node.cpp  refBoxMessage.cpp  refBoxTransport.cpp  refBoxUtils.cpp  sendScheduler.cpp
hardware/tf_broadcaster/: CMakeLists.txt  package.xml
hardware/tf_broadcaster/src/: tf_broadcaster.cpp  tf_broadcaster_node.cpp
manager/executeur_taches/: CMakeLists.txt  package.xml
manager/executeur_taches/include/: ArTagClientSrv.h  ArTagSubscriber.h  BaseStation.h  CapStation.h  DeliveryStation.h  DockingClient.h  ExploInfoSubscriber.h  FeuClientAction.h  FinalApproachingClient.h  GripperClientSrv.h  GtServerSrv.h  LocaSubscriber.h  MPS.h  Machine.h  MyElements.h  NavigationClientAction.h  ReportingMachineSrvClient.h  RingStation.h  RobotPoseSubscriber.h  fakeClientSrv.h  gtServerSrv.h
manager/executeur_taches/launch/: exec_tache.launch  testMatch.launch
manager/executeur_taches/src/: ArTagClientSrv.cpp  ArTagSubscriber.cpp  BaseStation.cpp  CapStation.cpp  DeliveryStation.cpp  DockingClient.cpp  ExploInfoSubscriber.cpp  FeuClientAction.cpp  FinalApproachingClient.cpp  GripperClientSrv.cpp  GtServerSrv.cpp  LocaSubscriber.cpp  MPS.cpp  Machine.cpp  MyElements.cpp  NavigationClientAction.cpp  Pince.cpp  ReportingMachineSrvClient.cpp  RingStation.cpp  RobotPoseSubscriber.cpp  emetteur_topic.cpp  fakeClientSrv.cpp  fake_action_finalApp.cpp  fake_action_navigation.cpp  fake_arTag_server.cpp  fake_client_order.cpp  fake_client_srv.cpp  fake_light_server_node.cpp  fake_publisher_ei.cpp  fake_publisher_node.cpp  fake_server_reporting.cpp  finalApproaching_client.cpp  gtPublisher.cpp  gtServerSrv.cpp  main.cpp  recepteur_srv.cpp  reportAllMachines_node.cpp  service_node.cpp  testRobotMachine_node.cpp
manager/generateur_taches/: CMakeLists.txt  README.md  package.xml
manager/generateur_taches/cfg/: custom_rosconsole.conf
manager/generateur_taches/launch/: debug.launch  gene_tache.launch  tasksGenerator.launch
manager/generateur_taches/src/: LocaSubscriber.cpp  action.cpp  action_node.cpp  activityTalker.cpp  activityTalker_node.cpp  correspondanceZE.cpp  emetteur_topic.cpp  envoi_ordre.cpp  etatdujeu.cpp  gameState.cpp  listetaches.cpp  machine.cpp  main.cpp  main2.cpp  main_node.cpp  orderInfo.cpp  orderInfo_node.cpp  orderListener.cpp  orderListener_node.cpp  product.cpp  produit.cpp  reception_ordre.cpp  robot.cpp  robotInfo.cpp  robotInfo_node.cpp  sendOrder.cpp  sendOrder_node.cpp  srvorder.cpp  stockage.cpp  storage.cpp  storageChart.cpp  tableaustockage.cpp  tabmachine.cpp  tache.cpp  task.cpp  tasksList.cpp  travail.cpp  travailphase.cpp  work.cpp  workFonctionsTest_node.cpp  (+1 more)
messages/deplacement_msg/: CMakeLists.txt  package.xml
messages/deplacement_msg/action/: GeneratePath.action  MoveToPose.action  TrackPath.action
messages/gripper_msg/: CMakeLists.txt  package.xml
navigation/final_approach/: CMakeLists.txt  README.md  package.xml
navigation/localisation/: CMakeLists.txt  README.md  package.xml
navigation/path_tracker/: CMakeLists.txt  README.md  package.xml
simulation/gazebo_sim_launch/: CMakeLists.txt  README.md  package.xml
simulation/gazebo_to_ros/: CMakeLists.txt  README.md  package.xml
traitement_image/feu_tricolore/: CMakeLists.txt  package.xml  param17-02.yaml
traitement_image/rqt_ft_gui/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
(+2213 files in other folders)
