<?xml version="1.0"?>
<package>
  <name>refbox_comm</name>
  <version>0.0.0</version>
  <description>

     refbox_comm

  </description>
  <maintainer email="vincent.coelen@polytech-lille.net">vincent</maintainer>
  <license>TODO</license>

  <url>http://ros.org/wiki/refbox_comm</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>comm_msg</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>comm_msg</run_depend>

  <export>
<!--    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/> -->
  </export>

</package>
