<?xml version="1.0"?>
<package>
  <name>localisation</name>
  <version>0.0.0</version>
  <description>The localisation package</description>
  <license>TODO</license>
  <maintainer email="th.danel@gmail.com">tdanel</maintainer>
  <author email="th.danel@gmail.com">Thomas Danel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>deplacement_msg</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>comm_msg</build_depend>
  <build_depend>common_utils</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>deplacement_msg</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>geometry_utils</run_depend>
  <run_depend>comm_msg</run_depend>
  <run_depend>common_utils</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>

</package>
