<?xml version="1.0"?>
<package>
  <name>path_tracker</name>
  <version>0.0.0</version>
  <description>The path_tracker package</description>

  <maintainer email="valentin.vergez@gmail.com">Valentin Vergez</maintainer>

  <license>TODO</license>

  <url type="repository">https://github.com/PyroTeam/robocup-pkg</url>
  <url type="bugtracker">https://github.com/PyroTeam/robocup-pkg/issues</url>
  <url type="website">https://github.com/PyroTeam/robocup-pkg/wiki</url>

  <author email="valentin.vergez@gmail.com">Valentin Vergez</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>deplacement_msg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>common_utils</build_depend>
  <build_depend>geometry_utils</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>deplacement_msg</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>common_utils</run_depend>
  <run_depend>geometry_utils</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
