cmake_minimum_required(VERSION 2.8.3)
project(gazebo_sim_launch)

## Find catkin macros and libraries
find_package(catkin REQUIRED COMPONENTS
)

###################################
## catkin specific configuration ##
###################################

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES robotino3_gazebo
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)